--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ body {
     justify-content: center;
     align-items: center;
     border: 1px solid #000;
+    margin: 20px 0;
 }
 
 .container .box:before {
